# Facial-AI-tku-

./: LICENSE  README.md  opencv_test1.py  pyproject.toml  run.py  start.py
app/: __init__.py  config.py
app/routes/: hologram_routes.py  user_routes.py
app/services/: FaceProject.py  README.md  complete_skin_analyzer_nodiag_api.py  facialskincoloranalysis_service.py  hologram_service.py  test.py  test1.py  user_service.py
app/services/face_analysis_results/: face_analysis_final_report.json
app/services/face_analysis_results/20250808091825/: 20250808091825_analysis_result.json
app/services/face_analysis_results/ChatGPT/: ChatGPT_analysis_result.json
app/services/face_analysis_results/Photo_human_1/: Photo_human_1_analysis_result.json
app/services/face_analysis_simple/: simple_analysis_report.json
app/services/face_analysis_simple/20250808091825/: 20250808091825_analysis.json
app/services/face_analysis_simple/Photo_human_1/: Photo_human_1_analysis.json
app/services/face_analysis_simple/S__10625032(1)/: S__10625032(1)_analysis.json
app/services/face_analysis_simple/yellow/: yellow_analysis.json
